<resources>
    <string name="app_name">PlayingWithNavigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="profile_image">Profile image</string>
    <string name="password">Password</string>
</resources>